src/test/ui/parser/issue-14303-fn-def.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-fn-def.rs:3:15
   |
LL | fn foo<'a, T, 'b>(x: &'a T) {}
   |               ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | fn foo<'a, 'b, T>(x: &'a T) {}
   |            ^^^ --

error: aborting due to previous error

